<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f2f2f2"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.fantasticgame.whitebus.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:visibility="visible"
                android:id="@+id/settings_main"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/card_ticket_price"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/ticket_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/ticket_price"
                            android:textSize="16sp"
                            android:text="25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />

                <android.support.v7.widget.CardView
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/card_route_number"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/route_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/route_number"
                            android:textSize="16sp"
                            android:text="075"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />

                <android.support.v7.widget.CardView
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_nickname"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/your_nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/nickname"
                            android:textSize="16sp"
                            android:text="Leonid_Belkin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />

                <android.support.v7.widget.CardView
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_report_format"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/report_format"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/report_format"
                            android:textSize="16sp"
                            android:text="@string/pref_report_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />

                <android.support.v7.widget.CardView
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/card_bus_stops"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="0dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/bus_stops"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/bus_stops"
                            android:textSize="16sp"
                            android:text="@string/pref_bus_stops_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:orientation="vertical"
                android:id="@+id/report_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/report_format"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:id="@+id/report_form_editor"
                            android:inputType="textMultiLine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/report_help"
                                android:text="@string/tags_help"
                                android:theme="@style/SettingsButton"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <Button
                                android:id="@+id/report_save"
                                android:text="@string/dialog_save"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
