<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f2f2f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- MAIN LAYOUT -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/work_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/work_start"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:layout_marginStart="5dp"
                            android:text="03:00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/work_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/work_end"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:layout_marginStart="5dp"
                            android:text="04:00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/work_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/work_time"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:layout_marginStart="5dp"
                            android:text="04:00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/passengers"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:layout_marginStart="5dp"
                            android:text="5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/routes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/routes"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:layout_marginStart="5dp"
                            android:text="12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/money"
                            android:textSize="16sp"
                            android:textColor="#000000"
                            android:layout_marginStart="5dp"
                            android:text="250"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:text="Начать работу"
                    android:id="@+id/btn_start"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatButton
                    android:text="Завершить работу"
                    android:id="@+id/btn_stop"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:text="+1 пассажир"
                    android:id="@+id/btn_add_pass"
                    android:theme="@style/Button.Borderless.Colored"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatButton
                    android:text="+1 круг"
                    android:id="@+id/btn_add_route"
                    android:theme="@style/Button.Borderless.Colored"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_reset"
                    android:theme="@style/Error"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="Обнулить статистику"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>