<android.support.v7.widget.CardView
    android:textIsSelectable="true"
    android:id="@+id/passenger"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="#ffffff"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
            <LinearLayout
                android:textIsSelectable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textIsSelectable="true"
                    android:id="@+id/title"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textSize="20dp"
                    android:text="Title"
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:textIsSelectable="true"
                    android:id="@+id/date"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textSize="16dp"
                    android:text="12.03.2019"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <View
                    android:background="#e2e2e2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                    <LinearLayout
                        android:textIsSelectable="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:layout_marginStart="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:textIsSelectable="true"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/passenger_add"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:textIsSelectable="true"
                                android:id="@+id/passenger_add"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:layout_marginStart="5dp"
                                android:text="03:00"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:textIsSelectable="true"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textIsSelectable="true"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/passenger_remove"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:textIsSelectable="true"
                                android:id="@+id/passenger_remove"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:layout_marginStart="5dp"
                                android:text="03:00"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:visibility="gone"
                            android:textIsSelectable="true"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textIsSelectable="true"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/note"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:textIsSelectable="false"
                                android:id="@+id/note"
                                android:textSize="16sp"
                                android:textColor="#000000"
                                android:layout_marginStart="5dp"
                                android:text="{note}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                </LinearLayout>
            </LinearLayout>



        </android.support.v7.widget.CardView>